--- a/kodgen-typescript/ng-typescript/petstore3/templates/model.ejs
+++ b/kodgen-typescript/ng-typescript/petstore3/templates/model.ejs
@@ -5,7 +5,7 @@ import { <%- importEntry.keys.join(', ') %> } from '<%- importEntry.path %>';
 <%_ } -%>
 <%_ for (const model of k.models) { -%>
 
-// <%- user.getHeader() %>
+// <%- d.getHeader() %>
 export interface <%- model.name %> {
 	<%_ for (const prop of model.properties) { -%>
 	<%_ const jsdocPropertyResult = k.jsdoc.build({ deprecated: prop.deprecated, description: prop.description }, 1) -%>
